--- a/LangGuide/ProcFunc/defaultparams.html
+++ b/LangGuide/ProcFunc/defaultparams.html
@@ -2,7 +2,7 @@
 
 <head>
 <object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-<param name="Keyword" value="Параметры по умолчанию">
+<param name="Keyword" value="Default arguments">
 </object>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
 <title></title>
@@ -11,7 +11,7 @@
 
 <body>
 
-<H1>Default Arguments</H1>
+<H1>Default arguments</H1>
 <p>В заголовке подпрограммы можно использовать параметры по умолчанию. Для этого 
 достаточно после параметра поставить знак присваивания и значение. Если при вызове 
 не указать значение параметра по умолчанию, то будет использовано то значение, 
