--- a/LangGuide/PABCSystemUnit/_main.html
+++ b/LangGuide/PABCSystemUnit/_main.html
@@ -11,9 +11,9 @@
 
 <body>
 
-<H1>Обзор системного модуля PABCSystem </H1>
-<p>Модуль PABCSystem называется <i><b><font color="#FF0000">системным</font></b></i> 
-и автоматически подключается первым к любой программе или модулю. Он содержит ряд 
+<H1>Overview of the system module PABCSystem </H1>
+<p>The PABCSystem module is called <i><b><font color="#FF0000">system</font></b></i> 
+and automatically connects primarily to any program or module. Он содержит ряд 
 процедур, функций, констант, типов, методов расширения, перегруженных операций.</p>
 <h2>Стандартные типы и константы</h2>
 <ul>
