translated _maint.html

--- a/LangGuide/PABCSystemUnit/_main.html
+++ b/LangGuide/PABCSystemUnit/_main.html
@@ -13,61 +13,59 @@
 
 <H1>Overview of the system module PABCSystem </H1>
 <p>The PABCSystem module is called <i><b><font color="#FF0000">system</font></b></i> 
-and automatically connects primarily to any program or module. Он содержит ряд 
-процедур, функций, констант, типов, методов расширения, перегруженных операций.</p>
-<h2>Стандартные типы и константы</h2>
+and automatically connects primarily to any program or module. It contains a number of
+procedures, functions, constants, types, extension methods, overloaded operations.</p>
+<h2>Standart types and constants</h2>
 <ul>
-<li><a href="Files\Standard constants.html">Стандартные константы</a></li>
-<li><a href="Files\Standard types.html">Стандартные типы</a></li>
+<li><a href="Files\Standard constants.html">Standard constants</a></li>
+<li><a href="Files\Standard types.html">Standard types</a></li>
 </ul>
-<h2>Стандартные подпрограммы</h2>
+<h2>Standard programs</h2>
 <ul>
-	<li><a href="Files\Common subroutines.html">Общие подпрограммы</a></li>
-	<li><a href="Files\Math subroutines.html">Математические подпрограммы</a></li>
-	<li><a href="Files\Read subroutines.html">Подпрограммы ввода</a></li>
-	<li><a href="Files\Write subroutines.html">Подпрограммы вывода</a></li>
-	<li><a href="Files\Common subroutines for files.html">Общие подпрограммы для работы с файлами</a></li>
-	<li><a href="Files\Subroutines for text files.html">Подпрограммы для работы с текстовыми файлами</a></li>
-	<li><a href="Files\Subroutines for binary files.html">Подпрограммы для работы с двоичными файлами</a></li>
-	<li><a href="Files\Functions for file names.html">Подпрограммы для работы с именами файлов</a></li>
-	<li><a href="Files\System subroutines.html">Cистемные подпрограммы</a></li>
-	<li><a href="Files\Subroutines for char.html">Подпрограммы для работы с символами</a></li>
-	<li><a href="Files\Subroutines for string.html">Подпрограммы для работы со строками</a></li>
-	<li><a href="Files\Subroutines for set of T.html">Подпрограммы для работы со стандартными множествами</a></li>
-	<li><a href="Files\Subroutines for array of T.html">Подпрограммы для работы с динамическими массивами</a></li>
+	<li><a href="Files\Common subroutines.html">Common subroutines</a></li>
+	<li><a href="Files\Math subroutines.html">Math subroutines</a></li>
+	<li><a href="Files\Read subroutines.html">Input subroutines</a></li>
+	<li><a href="Files\Write subroutines.html">Output subroutines</a></li>
+	<li><a href="Files\Common subroutines for files.html">Common subroutines for files</a></li>
+	<li><a href="Files\Subroutines for text files.html">Subroutines for text files</a></li>
+	<li><a href="Files\Subroutines for binary files.html">Subroutines for binary files</a></li>
+	<li><a href="Files\Functions for file names.html">Subroutines for working with file names</a></li>
+	<li><a href="Files\System subroutines.html">System subroutines</a></li>
+	<li><a href="Files\Subroutines for char.html">Subroutines for chars</a></li>
+	<li><a href="Files\Subroutines for string.html">Subroutines for strings</a></li>
+	<li><a href="Files\Subroutines for set of T.html">Subroutines for standard sets</a></li>
+	<li><a href="Files\Subroutines for array of T.html">Subroutines for dynamic arrays</a></li>
 </ul>
-<h2>Генерация объектов структурированных типов</h2>
+<h2>Generation of structured type objects</h2>
 <ul>
-<li><a href="Files\Subroutines for sequence generation.html">Подпрограммы для генерации последовательностей</a></li>
-	<li><a href="Files\Infinite sequences.html">Подпрограммы для генерации бесконечных последовательностей</a></li>
-	<li><a href="Files\Subroutines for array of T generation.html">Подпрограммы для генерации динамических массивов</a></li>
-	<li><a href="Files\Subroutines for matrix generation.html">Подпрограммы для генерации матриц</a></li>
-	<li><a href="Files\Subroutines for tuple generation.html">Подпрограммы для создания кортежей</a></li>
-	<li><a href="Files\Short functions Lst, HSet, SSet, Dict, KV.html">Короткие функции Lst, HSet, SSet, Dict, KV</a></li>
+<li><a href="Files\Subroutines for sequence generation.html">Subroutines for generating sequences</a></li>
+	<li><a href="Files\Infinite sequences.html">Subroutines for generating infinite sequences</a></li>
+	<li><a href="Files\Subroutines for array of T generation.html">Subroutines for generating dynamic arrays</a></li>
+	<li><a href="Files\Subroutines for matrix generation.html">Subroutines for generating matrices</a></li>
+	<li><a href="Files\Subroutines for tuple generation.html">Subroutines for generating turples</a></li>
+	<li><a href="Files\Short functions Lst, HSet, SSet, Dict, KV.html">Short functions Lst, HSet, SSet, Dict, KV</a></li>
 </ul>
-<h2>Методы расширения, определенные в модуле PABCSystem</h2>
+<h2>Extension methods defined in the module PABCSystem</h2>
 
 <ul>
-	<li><a href="Files\Extension methods for sequence of T.html">Методы расширения типа sequence of T</a></li>
-	<li><a href="Files\Extension methods for array of T.html">Методы расширения типа array of T</a></li>
-	<li><a href="Files/Extension%20methods%20for%20array%20[,]%20of%20T.html">Методы расширения типа array [,] of T</a></li>
-	<li><a href="Files/Extension%20methods%20for%20List%20T.html">Методы 
-	расширения типа List&lt;T&gt;</a></li>
-	<li><a href="Files\Extension methods for integer.html">Методы расширения типа integer</a></li>
-	<li><a href="Files\Extension methods for BigInteger.html">Методы расширения типа BigInteger</a></li>
-	<li><a href="Files\Extension methods for real.html">Методы расширения типа real</a></li>
-	<li><a href="Files\Extension methods for char.html">Методы расширения типа char</a></li>
-	<li><a href="Files\Extension methods for string.html">Методы расширения типа string</a></li>
-	<li><a href="Files\Extension methods for Func.html">Методы расширения типа Func</a></li>
-	<li><a href="Files\Extension methods for Complex.html">Методы расширения типа Complex</a></li>
-	<li><a href="Files\Extension methods for IDictionary.html">Методы расширения 
-	типа IDictionary</a></li>
+	<li><a href="Files\Extension methods for sequence of T.html">Extension methods for sequence of T</a></li>
+	<li><a href="Files\Extension methods for array of T.html">Extension methods for array of T</a></li>
+	<li><a href="Files/Extension%20methods%20for%20array%20[,]%20of%20T.html">Extension methods for array [,] of T</a></li>
+	<li><a href="Files/Extension%20methods%20for%20List%20T.html">Extension methods for List&lt;T&gt;</a></li>
+	<li><a href="Files\Extension methods for integer.html">Extension methods for integer</a></li>
+	<li><a href="Files\Extension methods for BigInteger.html">Extension methods for BigInteger</a></li>
+	<li><a href="Files\Extension methods for real.html">Extension methods for real</a></li>
+	<li><a href="Files\Extension methods for char.html">Extension methods for char</a></li>
+	<li><a href="Files\Extension methods for string.html">Extension methods for string</a></li>
+	<li><a href="Files\Extension methods for Func.html">Extension methods for Func</a></li>
+	<li><a href="Files\Extension methods for Complex.html">Extension methods for Complex</a></li>
+	<li><a href="Files\Extension methods for IDictionary.html">Extension methods for IDictionary</a></li>
 </ul>
-<h2>Методы типов файлов</h2>
+<h2>Methods of file types</h2>
 <ul>
-	<li><a href="stand_common_files_methods.html">Общие методы файловых типов</a></li>
-	<li><a href="stand_text_files_methods.html">Методы текстовых файлов</a></li>
-	<li><a href="stand_binary_files_methods.html">Методы двоичных файлов</a></li>
+	<li><a href="stand_common_files_methods.html">Common methods for file types</a></li>
+	<li><a href="stand_text_files_methods.html">Common methods for text files</a></li>
+	<li><a href="stand_binary_files_methods.html">Common methods for binary files</a></li>
 </ul>
 
 </body>
