--- a/LangGuide/PABCSystemUnit/stand_binary_files_methods.html
+++ b/LangGuide/PABCSystemUnit/stand_binary_files_methods.html
@@ -10,32 +10,32 @@
 <link rel="StyleSheet" href="../../default.css">
 </head>
 <body>
-<H1>Методы двоичных файлов</H1>
-<p>Для 
-двоичных файлов (типы <code><strong>file</strong></code>, <code><strong>file of</strong> T</code>) 
-определены следующие методы:</p>
+<H1>РњРµС‚РѕРґС‹ РґРІРѕРёС‡РЅС‹С… С„Р°Р№Р»РѕРІ</H1>
+<p>Р”Р»СЏ 
+РґРІРѕРёС‡РЅС‹С… С„Р°Р№Р»РѕРІ (С‚РёРїС‹ <code><strong>file</strong></code>, <code><strong>file of</strong> T</code>) 
+РѕРїСЂРµРґРµР»РµРЅС‹ СЃР»РµРґСѓСЋС‰РёРµ РјРµС‚РѕРґС‹:</p>
 &nbsp;<table border=0 CELLPADDING=5>
 	<tr>
 		<td>
 		<code><strong>function</strong> FilePos: int64; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает текущую позицию файлового указателя в двоичном файле
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ С‚РµРєСѓС‰СѓСЋ РїРѕР·РёС†РёСЋ С„Р°Р№Р»РѕРІРѕРіРѕ СѓРєР°Р·Р°С‚РµР»СЏ РІ РґРІРѕРёС‡РЅРѕРј С„Р°Р№Р»Рµ
 </td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> FileSize: int64; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает количество элементов в двоичном файле</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ РєРѕР»РёС‡РµСЃС‚РІРѕ СЌР»РµРјРµРЅС‚РѕРІ РІ РґРІРѕРёС‡РЅРѕРј С„Р°Р№Р»Рµ</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>procedure</strong> Seek(n: int64); </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Устанавливает текущую позицию файлового указателя в двоичном 
-		файле на элемент с номером n</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РЈСЃС‚Р°РЅР°РІР»РёРІР°РµС‚ С‚РµРєСѓС‰СѓСЋ РїРѕР·РёС†РёСЋ С„Р°Р№Р»РѕРІРѕРіРѕ СѓРєР°Р·Р°С‚РµР»СЏ РІ РґРІРѕРёС‡РЅРѕРј 
+		С„Р°Р№Р»Рµ РЅР° СЌР»РµРјРµРЅС‚ СЃ РЅРѕРјРµСЂРѕРј n</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>procedure</strong> Truncate; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Усекает двоичный файл, отбрасывая все элементы с позиции 
-		файлового указателя</tr>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РЈСЃРµРєР°РµС‚ РґРІРѕРёС‡РЅС‹Р№ С„Р°Р№Р», РѕС‚Р±СЂР°СЃС‹РІР°СЏ РІСЃРµ СЌР»РµРјРµРЅС‚С‹ СЃ РїРѕР·РёС†РёРё 
+		С„Р°Р№Р»РѕРІРѕРіРѕ СѓРєР°Р·Р°С‚РµР»СЏ</tr>
 	</table>
 </body></html>
