--- a/LangGuide/PABCSystemUnit/stand_binary_files_methods.html
+++ b/LangGuide/PABCSystemUnit/stand_binary_files_methods.html
@@ -10,32 +10,30 @@
 <link rel="StyleSheet" href="../../default.css">
 </head>
 <body>
-<H1>Методы двоичных файлов</H1>
-<p>Для 
-двоичных файлов (типы <code><strong>file</strong></code>, <code><strong>file of</strong> T</code>) 
-определены следующие методы:</p>
+<H1>Methods of binary files</H1>
+<p>For 
+bynary files (types <code><strong>file</strong></code>, <code><strong>file of</strong> T</code>) 
+the following methods are defined:</p>
 &nbsp;<table border=0 CELLPADDING=5>
 	<tr>
 		<td>
 		<code><strong>function</strong> FilePos: int64; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает текущую позицию файлового указателя в двоичном файле
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the current position of the file pointer in a binary file
 </td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> FileSize: int64; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает количество элементов в двоичном файле</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the number of elements in a binary file</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>procedure</strong> Seek(n: int64); </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Устанавливает текущую позицию файлового указателя в двоичном 
-		файле на элемент с номером n</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sets the current position of the file pointer in binary file to element number n</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>procedure</strong> Truncate; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Усекает двоичный файл, отбрасывая все элементы с позиции 
-		файлового указателя</tr>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Truncates the binary file, discarding all elements from the position of the file pointer</tr>
 	</table>
 </body></html>
