Changed encoding to UTF-8

--- a/LangGuide/PABCSystemUnit/stand_common_files_methods.html
+++ b/LangGuide/PABCSystemUnit/stand_common_files_methods.html
@@ -12,50 +12,50 @@
 <link rel="StyleSheet" href="../../default.css">
 </head>
 <body>
-<H1>Общие методы файловых типов</H1>
-<p>Для 
-всех стандартных файловых типов (<code>Text</code>,
+<H1>РћР±С‰РёРµ РјРµС‚РѕРґС‹ С„Р°Р№Р»РѕРІС‹С… С‚РёРїРѕРІ</H1>
+<p>Р”Р»СЏ 
+РІСЃРµС… СЃС‚Р°РЅРґР°СЂС‚РЅС‹С… С„Р°Р№Р»РѕРІС‹С… С‚РёРїРѕРІ (<code>Text</code>,
 <code><strong>file</strong></code>,
 <code>
 <strong>file of</strong> T</code>) 
-определены следующие методы:</p>
+РѕРїСЂРµРґРµР»РµРЅС‹ СЃР»РµРґСѓСЋС‰РёРµ РјРµС‚РѕРґС‹:</p>
 &nbsp;<table border=0 CELLPADDING=5>
 	<tr>
 		<td>
 	<code><strong>procedure</strong> Write(a,b,...); </code><br>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Записывает в файл значения a, b, ...
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р—Р°РїРёСЃС‹РІР°РµС‚ РІ С„Р°Р№Р» Р·РЅР°С‡РµРЅРёСЏ a, b, ...
 </td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> Name: string; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает имя файла</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ РёРјСЏ С„Р°Р№Р»Р°</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> FullName: string; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает полное имя файла</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ РїРѕР»РЅРѕРµ РёРјСЏ С„Р°Р№Р»Р°</td>
 	</tr>
 	<tr>
 		<td>
 	<code><strong>function</strong> Eof: boolean; </code><br>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает True, если достигнут конец файла, и False в противном 
-	случае</td>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ True, РµСЃР»Рё РґРѕСЃС‚РёРіРЅСѓС‚ РєРѕРЅРµС† С„Р°Р№Р»Р°, Рё False РІ РїСЂРѕС‚РёРІРЅРѕРј 
+	СЃР»СѓС‡Р°Рµ</td>
 	</tr>
 	<tr>
 		<td>
 	<code><strong>procedure</strong> Close; </code><br>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Закрывает файл</td>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р—Р°РєСЂС‹РІР°РµС‚ С„Р°Р№Р»</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>procedure</strong> Erase; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Удаляет файл</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РЈРґР°Р»СЏРµС‚ С„Р°Р№Р»</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>procedure</strong> Rename(newname: string); </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Переименовывает файл, давая ему имя newname</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РџРµСЂРµРёРјРµРЅРѕРІС‹РІР°РµС‚ С„Р°Р№Р», РґР°РІР°СЏ РµРјСѓ РёРјСЏ newname</td>
 	</tr>
 	</table>
 </body></html>
