--- a/LangGuide/PABCSystemUnit/_main.html
+++ b/LangGuide/PABCSystemUnit/_main.html
@@ -12,15 +12,15 @@
 <body>
 
 <H1>Overview of the system module PABCSystem </H1>
-<p>The PABCSystem module is called <i><b><font color="#FF0000">system</font></b></i> 
-and automatically connects primarily to any program or module. It contains a number of
+<p>The PABCSystem module is called <i><b><font color="#FF0000">the system module</font></b></i> 
+and it is automatically linked to any program or module first. It contains several
 procedures, functions, constants, types, extension methods, overloaded operations.</p>
-<h2>Standart types and constants</h2>
+<h2>Standard types and constants</h2>
 <ul>
 <li><a href="Files\Standard constants.html">Standard constants</a></li>
 <li><a href="Files\Standard types.html">Standard types</a></li>
 </ul>
-<h2>Standard programs</h2>
+<h2>Standard subroutines</h2>
 <ul>
 	<li><a href="Files\Common subroutines.html">Common subroutines</a></li>
 	<li><a href="Files\Math subroutines.html">Math subroutines</a></li>
@@ -45,7 +45,7 @@ procedures, functions, constants, types, extension methods, overloaded operation
 	<li><a href="Files\Subroutines for tuple generation.html">Subroutines for generating turples</a></li>
 	<li><a href="Files\Short functions Lst, HSet, SSet, Dict, KV.html">Short functions Lst, HSet, SSet, Dict, KV</a></li>
 </ul>
-<h2>Extension methods defined in the module PABCSystem</h2>
+<h2>Extension methods defined in the PABCSystem module</h2>
 
 <ul>
 	<li><a href="Files\Extension methods for sequence of T.html">Extension methods for sequence of T</a></li>
