--- a/LangGuide/PABCSystemUnit/stand_binary_files_methods.html
+++ b/LangGuide/PABCSystemUnit/stand_binary_files_methods.html
@@ -12,24 +12,24 @@
 <body>
 <H1>Methods of binary files</H1>
 <p>For 
-bynary files (types <code><strong>file</strong></code>, <code><strong>file of</strong> T</code>) 
+binary files (types <code><strong>file</strong></code>, <code><strong>file of</strong> T</code>) 
 the following methods are defined:</p>
 &nbsp;<table border=0 CELLPADDING=5>
 	<tr>
 		<td>
 		<code><strong>function</strong> FilePos: int64; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the current position of the file pointer in a binary file
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the current position of the file pointer in the binary file
 </td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>function</strong> FileSize: int64; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the number of elements in a binary file</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the number of elements in the binary file</td>
 	</tr>
 	<tr>
 		<td>
 		<code><strong>procedure</strong> Seek(n: int64); </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sets the current position of the file pointer in binary file to element number n</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sets the current position of the file pointer in the binary file to the element of number n</td>
 	</tr>
 	<tr>
 		<td>
