Checked and Translated stand_common_files_methods.html

--- a/LangGuide/PABCSystemUnit/stand_common_files_methods.html
+++ b/LangGuide/PABCSystemUnit/stand_common_files_methods.html
@@ -22,7 +22,7 @@ the following methods are defined:</p>
 	<tr>
 		<td>
 	<code><strong>procedure</strong> Write(a,b,...); </code><br>
-	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Writes values (a, b, ...) to a file 
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Writes values (a, b, ...) to the file 
 </td>
 	</tr>
 	<tr>
@@ -33,7 +33,7 @@ the following methods are defined:</p>
 	<tr>
 		<td>
 		<code><strong>function</strong> FullName: string; </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the full file name</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the full name of the file</td>
 	</tr>
 	<tr>
 		<td>
@@ -54,7 +54,7 @@ the following methods are defined:</p>
 	<tr>
 		<td>
 		<code><strong>procedure</strong> Rename(newname: string); </code><br>
-		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Renames the file to "newname"</td>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Renames the file to a "newname"</td>
 	</tr>
 	</table>
 </body></html>
