--- a/LangGuide/PABCSystemUnit/Files/Extension methods for real.html
+++ b/LangGuide/PABCSystemUnit/Files/Extension methods for real.html
@@ -1,4 +1,4 @@
-<HTML><HEAD><object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+п»ї<HTML><HEAD><object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
 <param name="Keyword" value="Between">
 <param name="Keyword" value="Round">
 <param name="Keyword" value="RoundBigInteger">
@@ -8,21 +8,21 @@
 <param name="Keyword" value="Trunc">
 <param name="Keyword" value="TruncBigInteger"></object>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1251"><link rel="StyleSheet" href="../../../default.css">
-</HEAD><body><H1>Методы расширения типа real</H1>
+</HEAD><body><H1>РњРµС‚РѕРґС‹ СЂР°СЃС€РёСЂРµРЅРёСЏ С‚РёРїР° real</H1>
 <table cellpadding=3><tr><td><code><b>function</b> Between(Self: real; a,b: real): boolean; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает True если значение находится между двумя другими</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ True РµСЃР»Рё Р·РЅР°С‡РµРЅРёРµ РЅР°С…РѕРґРёС‚СЃСЏ РјРµР¶РґСѓ РґРІСѓРјСЏ РґСЂСѓРіРёРјРё</td></tr>
 <tr><td><code><b>function</b> Round(Self: real): integer; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает число, округленное до ближайшего целого</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ С‡РёСЃР»Рѕ, РѕРєСЂСѓРіР»РµРЅРЅРѕРµ РґРѕ Р±Р»РёР¶Р°Р№С€РµРіРѕ С†РµР»РѕРіРѕ</td></tr>
 <tr><td><code><b>function</b> RoundBigInteger(Self: real): BigInteger; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает число, округленное до ближайшего длинного целого</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ С‡РёСЃР»Рѕ, РѕРєСЂСѓРіР»РµРЅРЅРѕРµ РґРѕ Р±Р»РёР¶Р°Р№С€РµРіРѕ РґР»РёРЅРЅРѕРіРѕ С†РµР»РѕРіРѕ</td></tr>
 <tr><td><code><b>function</b> Sqr(Self: real): real; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает квадрат числа</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ РєРІР°РґСЂР°С‚ С‡РёСЃР»Р°</td></tr>
 <tr><td><code><b>function</b> Sqrt(Self: real): real; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает квадратный корень числа</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ РєРІР°РґСЂР°С‚РЅС‹Р№ РєРѕСЂРµРЅСЊ С‡РёСЃР»Р°</td></tr>
 <tr><td><code><b>function</b> ToString(Self: real; frac: integer): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает вещественное, отформатированное к строке с frac цифрами после десятичной точки</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ РІРµС‰РµСЃС‚РІРµРЅРЅРѕРµ, РѕС‚С„РѕСЂРјР°С‚РёСЂРѕРІР°РЅРЅРѕРµ Рє СЃС‚СЂРѕРєРµ СЃ frac С†РёС„СЂР°РјРё РїРѕСЃР»Рµ РґРµСЃСЏС‚РёС‡РЅРѕР№ С‚РѕС‡РєРё</td></tr>
 <tr><td><code><b>function</b> Trunc(Self: real): integer; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает целую часть вещественного числа</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ С†РµР»СѓСЋ С‡Р°СЃС‚СЊ РІРµС‰РµСЃС‚РІРµРЅРЅРѕРіРѕ С‡РёСЃР»Р°</td></tr>
 <tr><td><code><b>function</b> TruncBigInteger(Self: real): BigInteger; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает целую часть вещественного числа как длинное целое</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ С†РµР»СѓСЋ С‡Р°СЃС‚СЊ РІРµС‰РµСЃС‚РІРµРЅРЅРѕРіРѕ С‡РёСЃР»Р° РєР°Рє РґР»РёРЅРЅРѕРµ С†РµР»РѕРµ</td></tr>
 </table></body></HTML>
