translated Extension methods for real.html

--- a/LangGuide/PABCSystemUnit/Files/Extension methods for real.html
+++ b/LangGuide/PABCSystemUnit/Files/Extension methods for real.html
@@ -8,21 +8,21 @@
 <param name="Keyword" value="Trunc">
 <param name="Keyword" value="TruncBigInteger"></object>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1251"><link rel="StyleSheet" href="../../../default.css">
-</HEAD><body><H1>Методы расширения типа real</H1>
+</HEAD><body><H1>Extension methods for real</H1>
 <table cellpadding=3><tr><td><code><b>function</b> Between(Self: real; a,b: real): boolean; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает True если значение находится между двумя другими</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns True if the value is between <b>a</b> and <b>b</b></td></tr>
 <tr><td><code><b>function</b> Round(Self: real): integer; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает число, округленное до ближайшего целого</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the closest integer</td></tr>
 <tr><td><code><b>function</b> RoundBigInteger(Self: real): BigInteger; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает число, округленное до ближайшего длинного целого</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the closest long integer</td></tr>
 <tr><td><code><b>function</b> Sqr(Self: real): real; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает квадрат числа</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the square of the value</td></tr>
 <tr><td><code><b>function</b> Sqrt(Self: real): real; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает квадратный корень числа</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the square root of the value</td></tr>
 <tr><td><code><b>function</b> ToString(Self: real; frac: integer): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает вещественное, отформатированное к строке с frac цифрами после десятичной точки</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns a string representation of the value with <b>frac</b> digits after the decimal point</td></tr>
 <tr><td><code><b>function</b> Trunc(Self: real): integer; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает целую часть вещественного числа</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the integer part of a floating point value</td></tr>
 <tr><td><code><b>function</b> TruncBigInteger(Self: real): BigInteger; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает целую часть вещественного числа как длинное целое</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the integer part of a floating point value as a long integer</td></tr>
 </table></body></HTML>
