--- a/LangGuide/PABCSystemUnit/Files/Extension methods for string.html
+++ b/LangGuide/PABCSystemUnit/Files/Extension methods for string.html
@@ -1,4 +1,4 @@
-<HTML><HEAD><object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+п»ї<HTML><HEAD><object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
 <param name="Keyword" value="Between">
 <param name="Keyword" value="Inverse">
 <param name="Keyword" value="IsMatch">
@@ -20,49 +20,49 @@
 <param name="Keyword" value="ToReals">
 <param name="Keyword" value="ToWords"></object>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1251"><link rel="StyleSheet" href="../../../default.css">
-</HEAD><body><H1>Методы расширения типа string</H1>
+</HEAD><body><H1>РњРµС‚РѕРґС‹ СЂР°СЃС€РёСЂРµРЅРёСЏ С‚РёРїР° string</H1>
 <table cellpadding=3><tr><td><code><b>function</b> Between(Self: string; a,b: string): boolean; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает True если значение находится между двумя другими</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ True РµСЃР»Рё Р·РЅР°С‡РµРЅРёРµ РЅР°С…РѕРґРёС‚СЃСЏ РјРµР¶РґСѓ РґРІСѓРјСЏ РґСЂСѓРіРёРјРё</td></tr>
 <tr><td><code><b>function</b> Inverse(Self: string): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает инверсию строки</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ РёРЅРІРµСЂСЃРёСЋ СЃС‚СЂРѕРєРё</td></tr>
 <tr><td><code><b>function</b> IsMatch(Self: string; reg: string; options: RegexOptions := RegexOptions.None): boolean; <b>extensionmethod</b> := Regex.IsMatch(Self, reg, options);</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Удовлетворяет ли строка регулярному выражению</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РЈРґРѕРІР»РµС‚РІРѕСЂСЏРµС‚ Р»Рё СЃС‚СЂРѕРєР° СЂРµРіСѓР»СЏСЂРЅРѕРјСѓ РІС‹СЂР°Р¶РµРЅРёСЋ</td></tr>
 <tr><td><code><b>function</b> Left(Self: string; length: integer): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает подстроку, полученную вырезанием из строки length самых левых символов</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ РїРѕРґСЃС‚СЂРѕРєСѓ, РїРѕР»СѓС‡РµРЅРЅСѓСЋ РІС‹СЂРµР·Р°РЅРёРµРј РёР· СЃС‚СЂРѕРєРё length СЃР°РјС‹С… Р»РµРІС‹С… СЃРёРјРІРѕР»РѕРІ</td></tr>
 <tr><td><code><b>function</b> Matches(Self: string; reg: string; options: RegexOptions := RegexOptions.None): <b>sequence <b>of</b></b> Match; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ищет в указанной строке все вхождения регулярного выражения и возвращает их в виде последовательности элементов типа Match</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РС‰РµС‚ РІ СѓРєР°Р·Р°РЅРЅРѕР№ СЃС‚СЂРѕРєРµ РІСЃРµ РІС…РѕР¶РґРµРЅРёСЏ СЂРµРіСѓР»СЏСЂРЅРѕРіРѕ РІС‹СЂР°Р¶РµРЅРёСЏ Рё РІРѕР·РІСЂР°С‰Р°РµС‚ РёС… РІ РІРёРґРµ РїРѕСЃР»РµРґРѕРІР°С‚РµР»СЊРЅРѕСЃС‚Рё СЌР»РµРјРµРЅС‚РѕРІ С‚РёРїР° Match</td></tr>
 <tr><td><code><b>function</b> MatchValue(Self: string; reg: string; options: RegexOptions := RegexOptions.None): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ищет в указанной строке первое вхождение регулярного выражения и возвращает его в виде строки</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РС‰РµС‚ РІ СѓРєР°Р·Р°РЅРЅРѕР№ СЃС‚СЂРѕРєРµ РїРµСЂРІРѕРµ РІС…РѕР¶РґРµРЅРёРµ СЂРµРіСѓР»СЏСЂРЅРѕРіРѕ РІС‹СЂР°Р¶РµРЅРёСЏ Рё РІРѕР·РІСЂР°С‰Р°РµС‚ РµРіРѕ РІ РІРёРґРµ СЃС‚СЂРѕРєРё</td></tr>
 <tr><td><code><b>function</b> MatchValues(Self: string; reg: string; options: RegexOptions := RegexOptions.None): <b>sequence <b>of</b></b> string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ищет в указанной строке все вхождения регулярного выражения и возвращает их в виде последовательности строк</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РС‰РµС‚ РІ СѓРєР°Р·Р°РЅРЅРѕР№ СЃС‚СЂРѕРєРµ РІСЃРµ РІС…РѕР¶РґРµРЅРёСЏ СЂРµРіСѓР»СЏСЂРЅРѕРіРѕ РІС‹СЂР°Р¶РµРЅРёСЏ Рё РІРѕР·РІСЂР°С‰Р°РµС‚ РёС… РІ РІРёРґРµ РїРѕСЃР»РµРґРѕРІР°С‚РµР»СЊРЅРѕСЃС‚Рё СЃС‚СЂРѕРє</td></tr>
 <tr><td><code><b>function</b> ReadInteger(Self: string; <b>var</b> from: integer): integer; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Считывает целое из строки начиная с позиции from и устанавливает from за считанным значением</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РЎС‡РёС‚С‹РІР°РµС‚ С†РµР»РѕРµ РёР· СЃС‚СЂРѕРєРё РЅР°С‡РёРЅР°СЏ СЃ РїРѕР·РёС†РёРё from Рё СѓСЃС‚Р°РЅР°РІР»РёРІР°РµС‚ from Р·Р° СЃС‡РёС‚Р°РЅРЅС‹Рј Р·РЅР°С‡РµРЅРёРµРј</td></tr>
 <tr><td><code><b>function</b> ReadReal(Self: string; <b>var</b> from: integer): real; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Считывает вещественное из строки начиная с позиции from и устанавливает from за считанным значением</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РЎС‡РёС‚С‹РІР°РµС‚ РІРµС‰РµСЃС‚РІРµРЅРЅРѕРµ РёР· СЃС‚СЂРѕРєРё РЅР°С‡РёРЅР°СЏ СЃ РїРѕР·РёС†РёРё from Рё СѓСЃС‚Р°РЅР°РІР»РёРІР°РµС‚ from Р·Р° СЃС‡РёС‚Р°РЅРЅС‹Рј Р·РЅР°С‡РµРЅРёРµРј</td></tr>
 <tr><td><code><b>function</b> ReadWord(Self: string; <b>var</b> from: integer): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Считывает слово из строки начиная с позиции from и устанавливает from за считанным значением</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РЎС‡РёС‚С‹РІР°РµС‚ СЃР»РѕРІРѕ РёР· СЃС‚СЂРѕРєРё РЅР°С‡РёРЅР°СЏ СЃ РїРѕР·РёС†РёРё from Рё СѓСЃС‚Р°РЅР°РІР»РёРІР°РµС‚ from Р·Р° СЃС‡РёС‚Р°РЅРЅС‹Рј Р·РЅР°С‡РµРЅРёРµРј</td></tr>
 <tr><td><code><b>function</b> RegexReplace(Self: string; reg,repl: string; options: RegexOptions := RegexOptions.None): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Заменяет в указанной строке все вхождения регулярного выражения указанной строкой замены и возвращает преобразованную строку</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р—Р°РјРµРЅСЏРµС‚ РІ СѓРєР°Р·Р°РЅРЅРѕР№ СЃС‚СЂРѕРєРµ РІСЃРµ РІС…РѕР¶РґРµРЅРёСЏ СЂРµРіСѓР»СЏСЂРЅРѕРіРѕ РІС‹СЂР°Р¶РµРЅРёСЏ СѓРєР°Р·Р°РЅРЅРѕР№ СЃС‚СЂРѕРєРѕР№ Р·Р°РјРµРЅС‹ Рё РІРѕР·РІСЂР°С‰Р°РµС‚ РїСЂРµРѕР±СЂР°Р·РѕРІР°РЅРЅСѓСЋ СЃС‚СЂРѕРєСѓ</td></tr>
 <tr><td><code><b>function</b> RegexReplace(Self: string; reg: string; repl: Match -&gt; string; options: RegexOptions := RegexOptions.None): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Заменяет в указанной строке все вхождения регулярного выражения указанным преобразованием замены и возвращает преобразованную строку</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р—Р°РјРµРЅСЏРµС‚ РІ СѓРєР°Р·Р°РЅРЅРѕР№ СЃС‚СЂРѕРєРµ РІСЃРµ РІС…РѕР¶РґРµРЅРёСЏ СЂРµРіСѓР»СЏСЂРЅРѕРіРѕ РІС‹СЂР°Р¶РµРЅРёСЏ СѓРєР°Р·Р°РЅРЅС‹Рј РїСЂРµРѕР±СЂР°Р·РѕРІР°РЅРёРµРј Р·Р°РјРµРЅС‹ Рё РІРѕР·РІСЂР°С‰Р°РµС‚ РїСЂРµРѕР±СЂР°Р·РѕРІР°РЅРЅСѓСЋ СЃС‚СЂРѕРєСѓ</td></tr>
 <tr><td><code><b>function</b> Remove(Self: string; <b>params</b> targets: <b><b>array</b> <b>of</b></b> string): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Удаляет в строке все вхождения указанных строк</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РЈРґР°Р»СЏРµС‚ РІ СЃС‚СЂРѕРєРµ РІСЃРµ РІС…РѕР¶РґРµРЅРёСЏ СѓРєР°Р·Р°РЅРЅС‹С… СЃС‚СЂРѕРє</td></tr>
 <tr><td><code><b>function</b> Right(Self: string; length: integer): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает подстроку, полученную вырезанием из строки length самых правых символов</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ РїРѕРґСЃС‚СЂРѕРєСѓ, РїРѕР»СѓС‡РµРЅРЅСѓСЋ РІС‹СЂРµР·Р°РЅРёРµРј РёР· СЃС‚СЂРѕРєРё length СЃР°РјС‹С… РїСЂР°РІС‹С… СЃРёРјРІРѕР»РѕРІ</td></tr>
 <tr><td><code><b>function</b> Slice(Self: string; from,step: integer): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает срез строки от индекса from с шагом step</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ СЃСЂРµР· СЃС‚СЂРѕРєРё РѕС‚ РёРЅРґРµРєСЃР° from СЃ С€Р°РіРѕРј step</td></tr>
 <tr><td><code><b>function</b> Slice(Self: string; from,step,count: integer): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает срез строки от индекса from с шагом step длины не более count</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ СЃСЂРµР· СЃС‚СЂРѕРєРё РѕС‚ РёРЅРґРµРєСЃР° from СЃ С€Р°РіРѕРј step РґР»РёРЅС‹ РЅРµ Р±РѕР»РµРµ count</td></tr>
 <tr><td><code><b>function</b> ToBigInteger(Self: string): BigInteger; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Преобразует строку в BigInteger</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РџСЂРµРѕР±СЂР°Р·СѓРµС‚ СЃС‚СЂРѕРєСѓ РІ BigInteger</td></tr>
 <tr><td><code><b>function</b> ToInteger(Self: string): integer; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Преобразует строку в целое</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РџСЂРµРѕР±СЂР°Р·СѓРµС‚ СЃС‚СЂРѕРєСѓ РІ С†РµР»РѕРµ</td></tr>
 <tr><td><code><b>function</b> ToIntegers(Self: string): <b><b>array</b> <b>of</b></b> integer; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Преобразует строку в массив целых</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РџСЂРµРѕР±СЂР°Р·СѓРµС‚ СЃС‚СЂРѕРєСѓ РІ РјР°СЃСЃРёРІ С†РµР»С‹С…</td></tr>
 <tr><td><code><b>function</b> ToReal(Self: string): real; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Преобразует строку в вещественное</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РџСЂРµРѕР±СЂР°Р·СѓРµС‚ СЃС‚СЂРѕРєСѓ РІ РІРµС‰РµСЃС‚РІРµРЅРЅРѕРµ</td></tr>
 <tr><td><code><b>function</b> ToReals(Self: string): <b><b>array</b> <b>of</b></b> real; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Преобразует строку в массив вещественных</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РџСЂРµРѕР±СЂР°Р·СѓРµС‚ СЃС‚СЂРѕРєСѓ РІ РјР°СЃСЃРёРІ РІРµС‰РµСЃС‚РІРµРЅРЅС‹С…</td></tr>
 <tr><td><code><b>function</b> ToWords(Self: string; <b>params</b> delim: <b><b>array</b> <b>of</b></b> char): <b><b>array</b> <b>of</b></b> string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Преобразует строку в массив слов</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;РџСЂРµРѕР±СЂР°Р·СѓРµС‚ СЃС‚СЂРѕРєСѓ РІ РјР°СЃСЃРёРІ СЃР»РѕРІ</td></tr>
 </table></body></HTML>
