--- a/LangGuide/PABCSystemUnit/Files/Extension methods for string.html
+++ b/LangGuide/PABCSystemUnit/Files/Extension methods for string.html
@@ -20,49 +20,49 @@
 <param name="Keyword" value="ToReals">
 <param name="Keyword" value="ToWords"></object>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1251"><link rel="StyleSheet" href="../../../default.css">
-</HEAD><body><H1>Методы расширения типа string</H1>
+</HEAD><body><H1>Extension methods for strings</H1>
 <table cellpadding=3><tr><td><code><b>function</b> Between(Self: string; a,b: string): boolean; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает True если значение находится между двумя другими</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns True if the value is between <b>a</b> and <b>b</b></td></tr>
 <tr><td><code><b>function</b> Inverse(Self: string): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает инверсию строки</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns a reversed string</td></tr>
 <tr><td><code><b>function</b> IsMatch(Self: string; reg: string; options: RegexOptions := RegexOptions.None): boolean; <b>extensionmethod</b> := Regex.IsMatch(Self, reg, options);</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Удовлетворяет ли строка регулярному выражению</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Indicates whether the string matches the regular expression</td></tr>
 <tr><td><code><b>function</b> Left(Self: string; length: integer): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает подстроку, полученную вырезанием из строки length самых левых символов</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns a substring built by removing the specified number of leftmost characters of the string</td></tr>
 <tr><td><code><b>function</b> Matches(Self: string; reg: string; options: RegexOptions := RegexOptions.None): <b>sequence <b>of</b></b> Match; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ищет в указанной строке все вхождения регулярного выражения и возвращает их в виде последовательности элементов типа Match</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Searches the string for all occurrences of the regular expression and returns them as a sequence of elements of type <b>Match</b></td></tr>
 <tr><td><code><b>function</b> MatchValue(Self: string; reg: string; options: RegexOptions := RegexOptions.None): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ищет в указанной строке первое вхождение регулярного выражения и возвращает его в виде строки</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Searches the string for the first occurrence of the regular expression and returns it as a string</td></tr>
 <tr><td><code><b>function</b> MatchValues(Self: string; reg: string; options: RegexOptions := RegexOptions.None): <b>sequence <b>of</b></b> string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Ищет в указанной строке все вхождения регулярного выражения и возвращает их в виде последовательности строк</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Searches the string for all occurrences of the regular expression and returns them as a sequence of strings</td></tr>
 <tr><td><code><b>function</b> ReadInteger(Self: string; <b>var</b> from: integer): integer; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Считывает целое из строки начиная с позиции from и устанавливает from за считанным значением</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Reads an integer from the specified position <b>from</b> in the string and sets <b>from</b> after the last character that was read</td></tr>
 <tr><td><code><b>function</b> ReadReal(Self: string; <b>var</b> from: integer): real; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Считывает вещественное из строки начиная с позиции from и устанавливает from за считанным значением</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Reads a real number from the specified position <b>from</b> in the string and sets <b>from</b> after the last character that was read</td></tr>
 <tr><td><code><b>function</b> ReadWord(Self: string; <b>var</b> from: integer): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Считывает слово из строки начиная с позиции from и устанавливает from за считанным значением</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Reads a word from the specified position <b>from</b> in the string and sets <b>from</b> after the last character that was read</td></tr>
 <tr><td><code><b>function</b> RegexReplace(Self: string; reg,repl: string; options: RegexOptions := RegexOptions.None): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Заменяет в указанной строке все вхождения регулярного выражения указанной строкой замены и возвращает преобразованную строку</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In the given string, replaces all substrings that match the regular expression with the specified replacement string and returns the new string</td></tr>
 <tr><td><code><b>function</b> RegexReplace(Self: string; reg: string; repl: Match -&gt; string; options: RegexOptions := RegexOptions.None): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Заменяет в указанной строке все вхождения регулярного выражения указанным преобразованием замены и возвращает преобразованную строку</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In the given string, replaces all substrings that match the regular expression with the specified transformation <b>repl</b> and returns the new string</td></tr>
 <tr><td><code><b>function</b> Remove(Self: string; <b>params</b> targets: <b><b>array</b> <b>of</b></b> string): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Удаляет в строке все вхождения указанных строк</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Removes all occurrences of the specified strings from the given string</td></tr>
 <tr><td><code><b>function</b> Right(Self: string; length: integer): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает подстроку, полученную вырезанием из строки length самых правых символов</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns a substring built by removing the specified number of rightmost characters of the string</td></tr>
 <tr><td><code><b>function</b> Slice(Self: string; from,step: integer): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает срез строки от индекса from с шагом step</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns a slice of the string with the specified beginning and step</td></tr>
 <tr><td><code><b>function</b> Slice(Self: string; from,step,count: integer): string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает срез строки от индекса from с шагом step длины не более count</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns a slice of the string with the specified beginning, step, and length limitation (not more than count elements)</td></tr>
 <tr><td><code><b>function</b> ToBigInteger(Self: string): BigInteger; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Преобразует строку в BigInteger</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Converts the string to BigInteger</td></tr>
 <tr><td><code><b>function</b> ToInteger(Self: string): integer; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Преобразует строку в целое</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Converts the string to integer</td></tr>
 <tr><td><code><b>function</b> ToIntegers(Self: string): <b><b>array</b> <b>of</b></b> integer; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Преобразует строку в массив целых</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Converts the string to an array of integers</td></tr>
 <tr><td><code><b>function</b> ToReal(Self: string): real; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Преобразует строку в вещественное</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Converts the string to a real number</td></tr>
 <tr><td><code><b>function</b> ToReals(Self: string): <b><b>array</b> <b>of</b></b> real; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Преобразует строку в массив вещественных</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Converts the string to an array of real numbers</td></tr>
 <tr><td><code><b>function</b> ToWords(Self: string; <b>params</b> delim: <b><b>array</b> <b>of</b></b> char): <b><b>array</b> <b>of</b></b> string; <b>extensionmethod</b>;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Преобразует строку в массив слов</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Converts the string to an array of words</td></tr>
 </table></body></HTML>
