translated Functions for Complex numbers.html

--- a/LangGuide/PABCSystemUnit/Files/Functions for Complex numbers.html
+++ b/LangGuide/PABCSystemUnit/Files/Functions for Complex numbers.html
@@ -12,29 +12,29 @@
 <param name="Keyword" value="Sin">
 <param name="Keyword" value="Sqrt"></object>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1251"><link rel="StyleSheet" href="../../../default.css">
-</HEAD><body><H1>Функции для работы с комплексными числами</H1>
+</HEAD><body><H1>Functions for complex numbers</H1>
 <table cellpadding=3><tr><td><code><b>function</b> Abs(c: Complex): Complex;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает модуль комплексного числа</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the absolute value of a complex number</td></tr>
 <tr><td><code><b>function</b> Conjugate(c: Complex): Complex;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает комплексно сопряженное число</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the complex conjugate of a complex number</td></tr>
 <tr><td><code><b>function</b> Cos(c: Complex): Complex;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает косинус комплексного числа</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the cosine of a complex number</td></tr>
 <tr><td><code><b>function</b> Cplx(re,im: real): Complex;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Конструирует комплексное число с вещественной частью re и мнимой частью im</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Constructs a complex number with the specified real and imaginary parts (<b>re</b> and <b>im</b> respectively)</td></tr>
 <tr><td><code><b>function</b> CplxFromPolar(magnitude,phase: real) : Complex;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Конструирует комплексное число по полярным координатам</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Constructs a complex number with the specified polar coordinates</td></tr>
 <tr><td><code><b>function</b> Exp(c: Complex): Complex;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает экспоненту комплексного числа</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the exponential function of a complex number</td></tr>
 <tr><td><code><b>function</b> Ln(c: Complex): Complex;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает натуральный логарифм комплексного числа</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the natural logarithm of a complex number</td></tr>
 <tr><td><code><b>function</b> Log(c: Complex): Complex;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает натуральный логарифм комплексного числа</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the natural logarithm of a complex number</td></tr>
 <tr><td><code><b>function</b> Log10(c: Complex): Complex;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает десятичный логарифм комплексного числа</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the common (base-10) logarithm of a complex number.</td></tr>
 <tr><td><code><b>function</b> Power(c,power: Complex): Complex;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает степень комплексного числа</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the complex power of base <b>c</b> raised to the specified power</td></tr>
 <tr><td><code><b>function</b> Sin(c: Complex): Complex;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает синус комплексного числа</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the sine of a complex number</td></tr>
 <tr><td><code><b>function</b> Sqrt(c: Complex): Complex;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает квадратный корень из комплексного числа</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the square root of a complex number</td></tr>
 </table></body></HTML>
