encoding changed Functions for file names.html

--- a/LangGuide/PABCSystemUnit/Files/Functions for file names.html
+++ b/LangGuide/PABCSystemUnit/Files/Functions for file names.html
@@ -1,4 +1,4 @@
-<HTML><HEAD><object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+п»ї<HTML><HEAD><object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
 <param name="Keyword" value="ExpandFileName">
 <param name="Keyword" value="ExtractFileDir">
 <param name="Keyword" value="ExtractFileDrive">
@@ -6,17 +6,17 @@
 <param name="Keyword" value="ExtractFileName">
 <param name="Keyword" value="ExtractFilePath"></object>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1251"><link rel="StyleSheet" href="../../../default.css">
-</HEAD><body><H1>Функции для работы с именами файлов</H1>
+</HEAD><body><H1>Р¤СѓРЅРєС†РёРё РґР»СЏ СЂР°Р±РѕС‚С‹ СЃ РёРјРµРЅР°РјРё С„Р°Р№Р»РѕРІ</H1>
 <table cellpadding=3><tr><td><code><b>function</b> ExpandFileName(fname: string): string;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает полное имя файла fname</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’РѕР·РІСЂР°С‰Р°РµС‚ РїРѕР»РЅРѕРµ РёРјСЏ С„Р°Р№Р»Р° fname</td></tr>
 <tr><td><code><b>function</b> ExtractFileDir(fname: string): string;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Выделяет имя диска и путь из полного имени файла fname</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’С‹РґРµР»СЏРµС‚ РёРјСЏ РґРёСЃРєР° Рё РїСѓС‚СЊ РёР· РїРѕР»РЅРѕРіРѕ РёРјРµРЅРё С„Р°Р№Р»Р° fname</td></tr>
 <tr><td><code><b>function</b> ExtractFileDrive(fname: string): string;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Выделяет путь из полного имени файла fname</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’С‹РґРµР»СЏРµС‚ РїСѓС‚СЊ РёР· РїРѕР»РЅРѕРіРѕ РёРјРµРЅРё С„Р°Р№Р»Р° fname</td></tr>
 <tr><td><code><b>function</b> ExtractFileExt(fname: string): string;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Выделяет расширение из полного имени файла fname</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’С‹РґРµР»СЏРµС‚ СЂР°СЃС€РёСЂРµРЅРёРµ РёР· РїРѕР»РЅРѕРіРѕ РёРјРµРЅРё С„Р°Р№Р»Р° fname</td></tr>
 <tr><td><code><b>function</b> ExtractFileName(fname: string): string;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Выделяет имя файла из полного имени файла fname</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’С‹РґРµР»СЏРµС‚ РёРјСЏ С„Р°Р№Р»Р° РёР· РїРѕР»РЅРѕРіРѕ РёРјРµРЅРё С„Р°Р№Р»Р° fname</td></tr>
 <tr><td><code><b>function</b> ExtractFilePath(fname: string): string;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Выделяет путь из полного имени файла fname</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Р’С‹РґРµР»СЏРµС‚ РїСѓС‚СЊ РёР· РїРѕР»РЅРѕРіРѕ РёРјРµРЅРё С„Р°Р№Р»Р° fname</td></tr>
 </table></body></HTML>
