translated Functions for file names.html

--- a/LangGuide/PABCSystemUnit/Files/Functions for file names.html
+++ b/LangGuide/PABCSystemUnit/Files/Functions for file names.html
@@ -6,17 +6,17 @@
 <param name="Keyword" value="ExtractFileName">
 <param name="Keyword" value="ExtractFilePath"></object>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1251"><link rel="StyleSheet" href="../../../default.css">
-</HEAD><body><H1>Функции для работы с именами файлов</H1>
+</HEAD><body><H1>Functions for file names</H1>
 <table cellpadding=3><tr><td><code><b>function</b> ExpandFileName(fname: string): string;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Возвращает полное имя файла fname</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Returns the full name of the file <b>fname</b></td></tr>
 <tr><td><code><b>function</b> ExtractFileDir(fname: string): string;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Выделяет имя диска и путь из полного имени файла fname</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Extracts the directory substring from the full file name</td></tr>
 <tr><td><code><b>function</b> ExtractFileDrive(fname: string): string;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Выделяет путь из полного имени файла fname</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Extracts the drive substring from the full file name</td></tr>
 <tr><td><code><b>function</b> ExtractFileExt(fname: string): string;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Выделяет расширение из полного имени файла fname</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Extracts the extension substring from the full file name</td></tr>
 <tr><td><code><b>function</b> ExtractFileName(fname: string): string;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Выделяет имя файла из полного имени файла fname</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Extracts the file name substring from the full file name</td></tr>
 <tr><td><code><b>function</b> ExtractFilePath(fname: string): string;</code>
-<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Выделяет путь из полного имени файла fname</td></tr>
+<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Extracts the path substring from the full file name</td></tr>
 </table></body></HTML>
