corrected localglobal.html

--- a/LangGuide/ProcFunc/localglobal.html
+++ b/LangGuide/ProcFunc/localglobal.html
@@ -14,7 +14,7 @@ Variables defined outside a subroutine
 are called <i>global</i> variables (global relative to the subroutine).</p>
 <p>Subroutine's parameters are considered to be its local variables.</p>
 <p>If the name of a local variable matches the name of some global variable, 
-then the local variable shadows that global variable, 
+then the local variable shadows the global variable, 
 which makes it impossible to use the global variable within the subroutine. 
 For example:</p>
 <blockquote>
